src/2.2/manuals/it_automation_base/management_console.rst
==============
管理コンソール
==============

はじめに
========

| 本書は、ITAシステムの管理コンソールの概要および操作方法について記載したものです。

概要
====

| 管理コンソールでは、初期メニュー以外に、利用部門が独自の情報をITAのデータベース上で管理する場合、管理レベルにあった個別メニューの作成が出来ます。
| 個別メニューの登録／変更／削除をご使用される際は、製品サポートへお問い合わせ下さい。

.. table:: Webコンテンツメニュー/画面一覧
   :align: left

   +----------+------------------------+-----------------------------+
   | **No.**  | **メニューグループ**   |  **メニュー・画面**         |
   |          |                        |                             |
   +==========+========================+=============================+
   | 1        | 管理コンソール         | メインメニュー              |
   +----------+                        +-----------------------------+
   | 2        |                        | システム設定                |
   +----------+                        +-----------------------------+
   | 3        |                        | メニューグループ管理        |
   +----------+                        +-----------------------------+
   | 4        |                        | メニュー管理                |
   +----------+                        +-----------------------------+
   | 5        |                        | ロール・メニュー紐付管理    |
   +----------+                        +-----------------------------+
   | 6        |                        | オペレーション削除管理      |
   +----------+                        +-----------------------------+
   | 7        |                        | ファイル削除管理            |
   +----------+------------------------+-----------------------------+


画面説明
========

| 管理コンソールの画面について説明します。

管理コンソールへのアクセス方法
------------------------------

| ログインに成功したITAはメインメニューに遷移します。
| メインメニューのDashBoardから管理コンソールを選ぶことで、管理コンソールへ遷移出来ます。
| 左側のメニューグループタブから管理コンソールを選ぶことで、管理コンソール内のメニューを指定して遷移することも出来ます。

.. figure:: ../../../images/ja/management_console/menu_group_list/MainMenu.gif
   :alt: メインメニュー
   :width: 800px
   :align: center

.. _menu_unique_operation:

各メニュー個別情報
==================

| 各メニュー個別の情報を説明します。

.. _system_setting:

システム設定
------------

| ITAシステム導入・運用時に設定すべき各種情報の更新を行います。

.. table:: システム設定
   :align: Left

   +---------+--------------------+-----------------------------------------+
   | **No.** | **項目名**         | **説明**                                |
   +=========+====================+=========================================+
   | 1       | 識別ID             | システム設定識別用のIDです。            |
   +---------+--------------------+-----------------------------------------+
   | 2       | 項目名             | システム設定の項目名です。              |
   +---------+--------------------+-----------------------------------------+
   | 3       | 設定値             | システム設定の設定値です。              |
   +---------+--------------------+-----------------------------------------+
   | 4       | 備考               | 項目の説明が記載されています。          |
   +---------+--------------------+-----------------------------------------+

.. danger::
   | 「識別ID」は変更しないで下さい。ITAの動作が保証されません。


メニューグループ管理
--------------------

| メニュー（子）はメニューグループ（親）に属します。この画面では親となるメニューグループの登録／更新／廃止を行います。

.. table:: メニューグループ管理
   :align: Left

   +---------+--------------------+---------------------------------------------------------+
   | **No.** | **項目名**         | **説明**                                                |
   +=========+====================+=========================================================+
   | 1       | メニューグループ\  | メニューグループのIDです。                              |
   |         | ID                 |                                                         |
   +---------+--------------------+---------------------------------------------------------+
   | 2       | 親メニューグルー\  | 親のメニューグループを設定できます。                    |
   |         | プ                 |                                                         |
   +---------+--------------------+---------------------------------------------------------+
   | 3       | メニューグループ\  | 日本語のメニューグループ名を設定できます。              |
   |         | 名(ja)             |                                                         |
   +---------+--------------------+---------------------------------------------------------+
   | 4       | メニューグループ\  | 英語のメニューグループ名を設定できます。                |
   |         | 名(en)             |                                                         |
   +---------+--------------------+---------------------------------------------------------+
   | 5       | パネル画像         | メニューグループのパネル画像を設定できます。\           |
   +---------+--------------------+---------------------------------------------------------+
   | 6       | パラメータシート\  | パラメータシート作成機能の「対象メニューグループ」\     |
   |         | 作成利用フラグ     | として利用可能かどうかのフラグを設定できます。          |
   +---------+--------------------+---------------------------------------------------------+
   | 7       | 表示順序           | DashBoardでのメニューグループの表示順序を設定できます\  |
   |         |                    | 。                                                      |
   +---------+--------------------+---------------------------------------------------------+
   | 8       | 備考               | 自由記述欄です。                                        |
   +---------+--------------------+---------------------------------------------------------+

.. warning::
   - | データ更新系の操作のため、システム管理者でログインして下さい。
   - | メニューグループ名称は、\ **一意**\ である必要があります。
   - | メニューグループ名称は重複登録出来ません。
   - | 「表示順序」の昇順にメインメニューに表示されます。「表示順序」が同じ場合は、「メニューグループID」の昇順で表示されます。
   - | 「パネル用画像」に使用出来るのは\ **PNGファイルのみ**\ です。

.. note::
   | 「備考」は任意です。

.. _menu_list:

メニュー管理
------------

| この画面でコンテンツの機能（メニュー）の登録／更新／廃止を行います。

.. table:: メニュー管理
   :align: Left

   +---------+--------------------+---------------------------------------------------------+
   | **No.** | **項目名**         | **説明**                                                |
   +=========+====================+=========================================================+
   | 1       | メニューID         | メニューのIDです。                                      |
   +---------+--------------------+---------------------------------------------------------+
   | 2       | メニューグループ   | 親となるメニューグループを設定できます。                |
   +---------+--------------------+---------------------------------------------------------+
   | 3       | メニュー名(ja)     | 日本語のメニュー名を設定できます。                      |
   +---------+--------------------+---------------------------------------------------------+
   | 4       | メニュー名(en)     | 英語のメニュー名を設定できます。                        |
   +---------+--------------------+---------------------------------------------------------+
   | 5       | メニュー名(rest)   | restでのメニュー名を設定できます。                      |
   +---------+--------------------+---------------------------------------------------------+
   | 6       | メニュー\          | メニューグループのサブメニューで表示する順序を設定でき\ |
   |         | グループ内表示順序 | ます。                                                  |
   +---------+--------------------+---------------------------------------------------------+
   | 7       | オートフィルタ\    | メニュー表示時に「オートフィルタ」の\                   |
   |         | チェック           | チェックボックスにチェックを入れるかどうか設定できます。|
   +---------+--------------------+---------------------------------------------------------+
   | 8       | 初回フィルタ       | メニュー表示時に「フィルタ」を\                         |
   |         |                    | クリックした状態で表示するかどうか設定できます。        |
   +---------+--------------------+---------------------------------------------------------+
   | 9       | 独自メニュー用素材 | 独自メニューを表示するための\                           |
   |         |                    | ZIPを登録できます。                                     |
   +---------+--------------------+---------------------------------------------------------+
   | 10      | Web表示最大行数    | 「一覧」に表示する最大行数を設定できます。              |
   +---------+--------------------+---------------------------------------------------------+
   | 11      | Web表示前確認行数  | 「一覧」に出力する前に\                                 |
   |         |                    | 確認ダイアログを表示する最大行数を設定できます。        |
   +---------+--------------------+---------------------------------------------------------+
   | 12      | Excel出力最大行数  | Excel出力する最大行数を設定できます。                   |
   +---------+--------------------+---------------------------------------------------------+
   | 13      | ソートキー         | 「一覧」に表示する並び順を設定できます。                |
   +---------+--------------------+---------------------------------------------------------+

.. warning::
   - | メニュー名称は\ **一意**\ である必要があります。
   - | ソートキーはJSON形式の表記で設定する必要があります。

.. note::
   - | Excel出力最大行数は0～1048576まで設定可能です。
   - | ソートキーは項目名にASC/DESC、値にキーとなるカラム名を入力して下さい。例）　{"ASC":"display_order"}
   - | 「備考」は任意です。

| 「Web表示最大行数」と「Web表示前確認行数」には次のような関係があります。

.. figure:: ../../../images/ja/diagram/Web表示最大行数の処理概要.png
   :alt:  Web表示最大行数の処理概要
   :align: center
   :width: 6in

   Web表示最大行数の処理概要

| 「各メニュー項目一覧」または「各メニュー項目一覧の全履歴数」が「Excel出力最大行数」を超えている場合、
| 「全件ダウンロード・ファイル一括登録」タブでのエクセル形式のファイルダウンロードは中止されます。
| JSON形式のファイルはダウンロードが可能です。
| 画面下部の変更履歴全件ダウンロードは出力し確認する用途で、アップロードには対応しておりません。

「独自メニュー用素材」の機能概要
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
| :menuselection:`メニュー管理` メニューでメニューを直接登録した場合に使用される素材です。
| 既存メニューやパラメータシート作成機能で作成されたメニューには登録しても使用されません。
| メニュー上に表示させたいHTML、Javascript、CSS等をZIPに圧縮して登録します。
| メインで表示させたいHTMLは「main.html」というファイル名固定です。
| 「main.html」内で使用されるファイル名は任意です。
| ZIP内のファイルは全てフォルダ直下に配置する必要があります。
| 新規で作成したメニューで「独自メニュー用素材」が登録されていない場合は、そのメニューを表示しても何も表示されません。
| 独自メニューを表示したい場合は「独自メニュー用素材」を登録後、:menuselection:`ロール・メニュー紐付管理` メニューで表示させたいメニューに対して、「メンテナンス可」または「閲覧のみ」の権限を付与する必要があります。

独自メニュー用素材の利用方法とサンプルについては :ref:`custom_menu_sample` を参照してください。

ロール・メニュー紐付管理
------------------------

| 各メニューとロール対応付けの登録／更新／廃止を行います。

| Exastro Platform「ロール管理」で登録したロールと「:ref:`menu_list`」で登録したメニューがリストボックスに表示されるので（下図 ①,②）、それぞれを選択し、紐付タイプ（下図 ③）を選択します。

.. figure:: ../../../images/ja/management_console/role_menu_link_list/ロール・メニュー紐付管理_設定画面.png
   :alt:  グループメニュー権限の設定画面（ロール・メニュー紐付管理）
   :align: center
   :width: 5in

.. warning::
   | ロールに紐付かないメニュー画面はメニューグループに表示されません。

.. table:: ロール・メニュー紐付管理
   :align: Left

   +---------+--------------------+--------------------------------------------+
   | **No.** | **項目名**         | **説明**                                   |
   +=========+====================+============================================+
   | 1       | UUID               | ロール・メニュー紐付管理のIDです。         |
   +---------+--------------------+--------------------------------------------+
   | 2       | ロール             | 紐付けるロールを設定できます。             |
   +---------+--------------------+--------------------------------------------+
   | 3       | メニュー           | 紐付けるメニューを設定できます。           |
   +---------+--------------------+--------------------------------------------+
   | 4       | 紐付               | ロールに対してメニューをメンテナンス可\    |
   |         |                    | 能にするか閲覧のみにするかを設定できます。 |
   +---------+--------------------+--------------------------------------------+
   | 5       | 備考               | 自由記述欄です。                           |
   +---------+--------------------+--------------------------------------------+

.. note::
   | 「備考」は任意です。


オペレーション削除管理
----------------------

詳細については、メンテナンスの「:doc:`../maintenance/operation_autoclean`」を参照してください。

ファイル削除管理
----------------

詳細については、メンテナンスの「:doc:`../maintenance/file_autoclean`」を参照してください。

付録
====

.. _custom_menu_sample:

独自メニュー利用方法
--------------------

利用手順
^^^^^^^^

| (1) :menuselection:`メニュー管理` メニューで「独自メニュー用素材」を登録し、新規メニューを作成します。
| 登録する「独自メニュー用素材」は :ref:`sample_file` を参考に作成してください。

.. figure:: ../../../images/ja/management_console/custom_menu/sample1_menu_regist.png
   :alt: 新規メニュー登録
   :width: 800px
   :align: center
   
   新規メニュー登録
   
| (2) :menuselection:`ロール・メニュー紐付管理` メニューで登録したメニューに対して、「メンテナンス可」または「閲覧のみ」の権限を付与します。

.. figure:: ../../../images/ja/management_console/custom_menu/sample1_role_regist.png
   :alt: ロール・メニュー紐付管理登録
   :width: 800px
   :align: center
   
   ロール・メニュー紐付管理登録

| (3) 登録したメニューを表示します。

.. _sample_file:

独自メニュー用素材サンプル
^^^^^^^^^^^^^^^^^^^^^^^^^^

| サンプル①
| 1枚の画像と :guilabel:`Hello` ボタンを押下すると「Hello」というアラートを表示します。
| :download:`サンプル①素材 <../../files/sample.zip>`

.. figure:: ../../../images/ja/management_console/custom_menu/sample_menu1.png
   :alt: サンプル①
   :width: 800px
   :align: center
   
   サンプル①

| サンプル②
| 他のITAのメニューと同じようなメニューを表示します。
| :download:`サンプル②素材 <../../files/sample2.zip>`

.. figure:: ../../../images/ja/management_console/custom_menu/sample_menu2.png
   :alt: サンプル②
   :width: 800px
   :align: center
   
   サンプル②

| サンプル③
| 「独自メニュー用素材」を登録せずに作成したメニューを表示した場合

.. figure:: ../../../images/ja/management_console/custom_menu/sample_menu3.png
   :alt: サンプル③
   :width: 800px
   :align: center
   
   サンプル③